src/test/deca/context/invalid/mod_comp_inval_01.deca
// Description:
//    Initialisation et typage
//
// Resultats:
//      Ligne 11: ,
//
// Historique:
//    cree le 01/01/2023

{
   int a = 4%(1.2)
}
